--- a/lichess_club_scores.ipynb
+++ b/lichess_club_scores.ipynb
@@ -1,8 +1,113 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f2568827-43f0-4058-b5b2-509c5f6337b9",
+   "metadata": {},
+   "source": [
+    "# Lichess Schachstatistik"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
+   "id": "69be251c-d717-4aa7-a82c-ee4a1d60bcd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\python310\\lib\\site-packages (1.4.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\python310\\lib\\site-packages (from pandas) (1.21.4)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\python310\\lib\\site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\python310\\lib\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\python310\\lib\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.3.1; however, version 22.2.2 is available.\n",
+      "You should consider upgrading via the 'C:\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\python310\\lib\\site-packages (1.21.4)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.3.1; however, version 22.2.2 is available.\n",
+      "You should consider upgrading via the 'C:\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib in c:\\python310\\lib\\site-packages (3.4.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\python310\\lib\\site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\python310\\lib\\site-packages (from matplotlib) (8.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\python310\\lib\\site-packages (from matplotlib) (3.0.6)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\python310\\lib\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\python310\\lib\\site-packages (from matplotlib) (1.3.2)\n",
+      "Requirement already satisfied: numpy>=1.16 in c:\\python310\\lib\\site-packages (from matplotlib) (1.21.4)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\python310\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.3.1; however, version 22.2.2 is available.\n",
+      "You should consider upgrading via the 'C:\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: seaborn in c:\\python310\\lib\\site-packages (0.11.2)\n",
+      "Requirement already satisfied: pandas>=0.23 in c:\\python310\\lib\\site-packages (from seaborn) (1.4.1)\n",
+      "Requirement already satisfied: scipy>=1.0 in c:\\python310\\lib\\site-packages (from seaborn) (1.8.0)\n",
+      "Requirement already satisfied: numpy>=1.15 in c:\\python310\\lib\\site-packages (from seaborn) (1.21.4)\n",
+      "Requirement already satisfied: matplotlib>=2.2 in c:\\python310\\lib\\site-packages (from seaborn) (3.4.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (2.8.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (0.11.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (3.0.6)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (1.3.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (8.4.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\python310\\lib\\site-packages (from pandas>=0.23->seaborn) (2021.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\python310\\lib\\site-packages (from python-dateutil>=2.7->matplotlib>=2.2->seaborn) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.3.1; however, version 22.2.2 is available.\n",
+      "You should consider upgrading via the 'C:\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# install packages for binder repisotory\n",
+    "! pip install pandas \n",
+    "! pip install numpy \n",
+    "! pip install matplotlib\n",
+    "! pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "99cd02f1-f588-4f19-be7d-59593b06b8f0",
    "metadata": {},
    "outputs": [
@@ -15,22 +120,23 @@
     }
    ],
    "source": [
+    "# import mudule\n",
     "from utils import*\n",
     "\n",
     "## obtain club dataframe\n",
     "df = get_club_df(club='sc-weisse-dame-ev', no_tournaments = 500)\n",
     "\n",
-    "## replace names in case player used two differnt accounts\n",
+    "## replace names in case a player used two differnt accounts\n",
     "dict_names_replace = {'\\'emperor555\\'':'\\'Der_Emperor\\'','\\'CccLllZzz\\'' : '\\'CccLllZzz_15_07_22\\''}\n",
     "df = change_names(df,dict_names_replace)\n",
     "\n",
-    "## save score-tables to pickles for all tournbaments and for certain years\n",
+    "## save score-tables to pickles for all tournaments and for certain years\n",
     "save_pickle_score_table(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "b8cd3466-0174-4d59-9d81-ae9b7803a6f8",
    "metadata": {},
    "outputs": [
@@ -54,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "48dfe672-b017-4348-9040-c3cff331169d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7db05558bcad48be99fa8033a22916eb",
+       "model_id": "a85d7796d89748d5a25ec2716d62a6e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +184,7 @@
        "<function utils.best_players(file='score_table_all.pkl', no_players=10)>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,13 +194,14 @@
     "\n",
     "\n",
     "ip.interact(best_players, file=[\n",
-    "    ('Gesamt', 'score_table_all.pkl' ),\n",
-    "    ('2022','score_table_2022.pkl'),\n",
-    "    ('2021','score_table_2021.pkl'),\n",
-    "    ('2020','score_table_2020.pkl'),\n",
+    "                        ('Gesamt', 'score_table_all.pkl' ),\n",
+    "                        ('2022','score_table_2022.pkl'),\n",
+    "                        ('2021','score_table_2021.pkl'),\n",
+    "                        ('2020','score_table_2020.pkl'),\n",
     "    \n",
-    "],\n",
-    "                    no_players = ip.IntSlider(min=1, max=30, step=1, value=10))"
+    "                               ],\n",
+    "     no_players = ip.IntSlider(min=1, max=30, step=1, value=10)\n",
+    "           )"
    ]
   }
  ],
