--- a/lichess_club_scores.ipynb
+++ b/lichess_club_scores.ipynb
@@ -9,100 +9,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "69be251c-d717-4aa7-a82c-ee4a1d60bcd6",
+   "cell_type": "markdown",
+   "id": "4605f5ca-e427-4349-a388-91f471af7d2e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\python310\\lib\\site-packages (1.4.1)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in c:\\python310\\lib\\site-packages (from pandas) (1.21.4)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\python310\\lib\\site-packages (from pandas) (2021.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\python310\\lib\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\python310\\lib\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.3.1; however, version 22.2.2 is available.\n",
-      "You should consider upgrading via the 'C:\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in c:\\python310\\lib\\site-packages (1.21.4)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.3.1; however, version 22.2.2 is available.\n",
-      "You should consider upgrading via the 'C:\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: matplotlib in c:\\python310\\lib\\site-packages (3.4.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\python310\\lib\\site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\python310\\lib\\site-packages (from matplotlib) (8.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\python310\\lib\\site-packages (from matplotlib) (3.0.6)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\python310\\lib\\site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\python310\\lib\\site-packages (from matplotlib) (1.3.2)\n",
-      "Requirement already satisfied: numpy>=1.16 in c:\\python310\\lib\\site-packages (from matplotlib) (1.21.4)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\python310\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.3.1; however, version 22.2.2 is available.\n",
-      "You should consider upgrading via the 'C:\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: seaborn in c:\\python310\\lib\\site-packages (0.11.2)\n",
-      "Requirement already satisfied: pandas>=0.23 in c:\\python310\\lib\\site-packages (from seaborn) (1.4.1)\n",
-      "Requirement already satisfied: scipy>=1.0 in c:\\python310\\lib\\site-packages (from seaborn) (1.8.0)\n",
-      "Requirement already satisfied: numpy>=1.15 in c:\\python310\\lib\\site-packages (from seaborn) (1.21.4)\n",
-      "Requirement already satisfied: matplotlib>=2.2 in c:\\python310\\lib\\site-packages (from seaborn) (3.4.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (2.8.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (0.11.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (3.0.6)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (1.3.2)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\python310\\lib\\site-packages (from matplotlib>=2.2->seaborn) (8.4.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\python310\\lib\\site-packages (from pandas>=0.23->seaborn) (2021.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\python310\\lib\\site-packages (from python-dateutil>=2.7->matplotlib>=2.2->seaborn) (1.16.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.3.1; however, version 22.2.2 is available.\n",
-      "You should consider upgrading via the 'C:\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    }
-   ],
    "source": [
-    "# install packages for binder repisotory\n",
-    "! pip install pandas \n",
-    "! pip install numpy \n",
-    "! pip install matplotlib\n",
-    "! pip install seaborn"
+    "## 1. Get and Save Data"
    ]
   },
   {
@@ -135,6 +46,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5831e95-0d6c-496d-95f1-26d5ed3208a3",
+   "metadata": {},
+   "source": [
+    "## 2. Participants and League"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "b8cd3466-0174-4d59-9d81-ae9b7803a6f8",
@@ -156,6 +75,14 @@
    "source": [
     "## Number of players and league \n",
     "teilnehmer_and_liga(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c28e63b-aa7c-4548-bcc4-2837e543198e",
+   "metadata": {},
+   "source": [
+    "## 3. Beste Spieler"
    ]
   },
   {
@@ -202,6 +129,159 @@
     "                               ],\n",
     "     no_players = ip.IntSlider(min=1, max=30, step=1, value=10)\n",
     "           )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d58162ee-f1cb-4784-a4c2-3ded51c81f25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package              Version\n",
+      "-------------------- ---------\n",
+      "anyio                3.5.0\n",
+      "argon2-cffi          21.3.0\n",
+      "argon2-cffi-bindings 21.2.0\n",
+      "asgiref              3.4.1\n",
+      "attrs                21.4.0\n",
+      "Babel                2.9.1\n",
+      "backcall             0.2.0\n",
+      "beautifulsoup4       4.10.0\n",
+      "bleach               4.1.0\n",
+      "bokeh                2.4.3\n",
+      "certifi              2021.10.8\n",
+      "cffi                 1.15.0\n",
+      "charset-normalizer   2.0.12\n",
+      "colorama             0.4.4\n",
+      "cycler               0.11.0\n",
+      "DateTime             4.3\n",
+      "debugpy              1.5.1\n",
+      "decorator            5.1.0\n",
+      "defusedxml           0.7.1\n",
+      "Django               3.2.9\n",
+      "entrypoints          0.3\n",
+      "et-xmlfile           1.1.0\n",
+      "idna                 3.3\n",
+      "image                1.5.33\n",
+      "ipykernel            6.5.0\n",
+      "ipython              7.29.0\n",
+      "ipython-genutils     0.2.0\n",
+      "ipywidgets           7.7.0\n",
+      "jedi                 0.18.0\n",
+      "Jinja2               3.0.3\n",
+      "json5                0.9.6\n",
+      "jsonschema           4.4.0\n",
+      "jupyter-client       7.0.6\n",
+      "jupyter-core         4.9.1\n",
+      "jupyter-server       1.15.6\n",
+      "jupyterlab           3.3.2\n",
+      "jupyterlab-pygments  0.1.2\n",
+      "jupyterlab-server    2.11.2\n",
+      "jupyterlab-widgets   1.1.0\n",
+      "kiwisolver           1.3.2\n",
+      "lxml                 4.8.0\n",
+      "MarkupSafe           2.1.1\n",
+      "matplotlib           3.4.3\n",
+      "matplotlib-inline    0.1.3\n",
+      "mistune              0.8.4\n",
+      "nbclassic            0.3.7\n",
+      "nbclient             0.5.13\n",
+      "nbconvert            6.4.4\n",
+      "nbformat             5.2.0\n",
+      "nest-asyncio         1.5.1\n",
+      "notebook             6.4.10\n",
+      "notebook-shim        0.1.0\n",
+      "numpy                1.21.4\n",
+      "openpyxl             3.0.9\n",
+      "packaging            21.3\n",
+      "pandas               1.4.1\n",
+      "pandocfilters        1.5.0\n",
+      "parso                0.8.2\n",
+      "pickleshare          0.7.5\n",
+      "Pillow               8.4.0\n",
+      "pip                  21.3.1\n",
+      "prometheus-client    0.13.1\n",
+      "prompt-toolkit       3.0.22\n",
+      "py4j                 0.10.9.5\n",
+      "pycparser            2.21\n",
+      "Pygments             2.10.0\n",
+      "pyparsing            3.0.6\n",
+      "PyQt6                6.2.1\n",
+      "PyQt6-Qt6            6.2.1\n",
+      "PyQt6-sip            13.1.0\n",
+      "pyrsistent           0.18.1\n",
+      "PySide6              6.2.1\n",
+      "pyspark              3.3.0\n",
+      "pytesseract          0.3.8\n",
+      "python-dateutil      2.8.2\n",
+      "pytz                 2021.3\n",
+      "pywin32              302\n",
+      "pywinpty             2.0.5\n",
+      "PyYAML               6.0\n",
+      "pyzmq                22.3.0\n",
+      "requests             2.27.1\n",
+      "SciencePlots         1.0.9\n",
+      "scipy                1.8.0\n",
+      "seaborn              0.11.2\n",
+      "Send2Trash           1.8.0\n",
+      "setuptools           57.4.0\n",
+      "shiboken6            6.2.1\n",
+      "six                  1.16.0\n",
+      "sniffio              1.2.0\n",
+      "soupsieve            2.3.1\n",
+      "sqlparse             0.4.2\n",
+      "terminado            0.13.3\n",
+      "testpath             0.6.0\n",
+      "tornado              6.1\n",
+      "traitlets            5.1.1\n",
+      "typing_extensions    4.2.0\n",
+      "urllib3              1.26.9\n",
+      "wcwidth              0.2.5\n",
+      "webencodings         0.5.1\n",
+      "websocket-client     1.3.1\n",
+      "wheel                0.37.0\n",
+      "widgetsnbextension   3.6.0\n",
+      "XlsxWriter           3.0.3\n",
+      "zope.interface       5.4.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.3.1; however, version 22.2.2 is available.\n",
+      "You should consider upgrading via the 'C:\\Python310\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "87b64cdb-708d-440e-951a-497d191cb633",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'app\\\\subdir\\\\dir\\\\filename.foo'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.join('app', 'subdir', 'dir', 'filename.foo')"
    ]
   }
  ],
